--- a/login.html
+++ b/login.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>这是登录</title>
-    <link rel="stylesheet" href="./login.css">
-</head>
-<body>
-    <h1>这是登录</h1>
-</body>
-</html>
+<h2>我在reg分支修改了这个文件</h2>
